# agentic-S3

./: .env_example  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
src/models/: langchain_client.py
src/resources/: s3_resource.py
src/tools/: agents.py
src/ui/: app.py
